--- a/MainContent.css
+++ b/MainContent.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     height: 85%;
+    padding-top: 50px;
 }
 
 .Projects{
@@ -11,23 +12,25 @@
 }
 
 #User_Projects{
-    margin-top: 65px;
     font-size: 32px;
     font-weight: bold;
-    margin-left: 30px;
+    padding-left: 30px;
+    height: 5%;
 }
 
 
 .Grid_Container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%/1, max(500px, 100%/4)), 1fr));
-    padding: 10px;
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    column-gap: 30px;
+    row-gap: 30px;
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none; 
-    height: 91%;
-    margin-left: 20px;
+    height: 95%;
+    align-content: stretch;
+    justify-content: center;
+    padding: 22px;
 }
 
 .Grid_Container::-webkit-scrollbar {
@@ -37,8 +40,7 @@
 
 .Grid{
     background: -webkit-linear-gradient(left, orange 2.5%, white 0%);
-    width: 500px;
-    height: 250px;
+    aspect-ratio: 2 / 1;
     border-radius: 10px;
     box-shadow: 3px 6px 7px 0px rgba(166,166,166,1);
 }
