--- a/stylesheets.css
+++ b/stylesheets.css
@@ -17,7 +17,7 @@
 .Content_Container{
     background-color: whitesmoke;
     width: 85%;
-    height: 100%;
+    height: 100vh;
 }
 
 /* --------------------------------------------------- Header --------------------------------------------------- */
