--- a/MainContent.css
+++ b/MainContent.css
@@ -8,14 +8,17 @@
 
 .Projects{
     height: 100%;
-    width: 75%;
+    width: 80%;
 }
 
 #User_Projects{
     font-size: 32px;
     font-weight: bold;
-    padding-left: 30px;
     height: 5%;
+}
+
+.LeftProjects{
+    padding-left: 30px;
 }
 
 
@@ -31,6 +34,7 @@
     align-content: stretch;
     justify-content: center;
     padding: 22px;
+    padding-top: 0px;
 }
 
 .Grid_Container::-webkit-scrollbar {
@@ -48,20 +52,26 @@
 /* --------------------------------------------------- Right Side Board --------------------------------------------------- */
 
 .Info_Container{
-    width: 25%;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    width: 20%;
 }
 
 .Announcements{
-    justify-content: center;
-    align-items: center;
+
 }
 
-.Announcement_Container{
+#User_Projects{
+    display: flex;
+    justify-content: left;
+}
+
+#Side_Container{
+    margin-top: 30px;
     background: white;
-    width: 80%;
-    aspect-ratio: 1 / 1.5;
+    width: 350px;
+    aspect-ratio: 1 / 1.3;
     border-radius: 10px;
     box-shadow: 3px 6px 7px 0px rgba(166,166,166,1);
     list-style-type: none;
@@ -69,8 +79,17 @@
 }
 
 
-#Info{
+#InfoItem{
     color: black;
     font-size: medium;
     font-weight: 300;
+    height: 100%;
+}
+.Item{
+    height: 100%;
+}
+
+#ListItem{
+    height: 33.33%;
+    text-overflow: ellipsis;
 }
